Add Export CSV trigger download popover for Events Syslog page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2083,7 +2083,7 @@ html[data-theme='dark'] {
 }
 #csvDownloadContent {
   .content {
-    width: 325px;
+    width: 500px;
     .header {
       font-size: 14px;
       padding: 0 10px 10px 10px;
@@ -2096,6 +2096,9 @@ html[data-theme='dark'] {
       }
     }
     .scheduled-list {
+      .date-time {
+        width: 175px;
+      }
       .service-list {
         height: 310px;
         li {
