Move CSV export popover to a component. Implement the CSV export on Events page.

--- a/less/modal.less
+++ b/less/modal.less
@@ -2083,7 +2083,7 @@ html[data-theme='dark'] {
 }
 #csvDownloadContent {
   .content {
-    width: 500px;
+    width: 525px;
     .header {
       font-size: 14px;
       padding: 0 10px 10px 10px;
@@ -2092,21 +2092,15 @@ html[data-theme='dark'] {
         font-size: 16px;
         font-weight: bold;
         color: var(--formEmailGroup);
-        margin-right: 10px;
+        margin-right: 110px;
       }
     }
     .scheduled-list {
-      .date-time {
-        width: 175px;
+      .main-table {
+        width: 100%;
       }
       .service-list {
         height: 310px;
-        li {
-          padding: 2px 15px;
-        }
-        .list-text {
-          flex: 0 0 200px;
-        }
         .delete-icon {
           margin: 0 10px;
         }
