Start the NCCST report btn functionality.

--- a/less/app.less
+++ b/less/app.less
@@ -1915,6 +1915,15 @@ button.standard:hover:not([disabled]) {
             width: 165px;
             margin: 15px 20px 10px 20px;
           }
+          .safety-btns {
+            position: absolute;
+            top: 70px;
+            right: 15px;
+            button {
+              margin: 0 3px;
+              padding: .3em 1em;
+            }
+          }
           ul.host-list,
           ul.safety-list {
             & > li {
