--- a/less/modal.less
+++ b/less/modal.less
@@ -2152,3 +2152,7 @@ html[data-theme='dark'] {
 #testResultDialog-content {
   max-height: 400px;
 }
+#reportNCCSTdialog-content {
+  max-height: 400px;
+  padding: 25px;
+}
