Add time interval button groups for Config Syslog timeline dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1341,6 +1341,9 @@ html[data-theme='dark'] {
 /* configuration/syslog/syslog */
 #viewEventsTimeline-content {
   width: 1280px;
+  .interval-section {
+    position: absolute;
+  }
   .calendar-section {
     overflow: hidden;
     width: 625px;
