Start working on the HMD settings product regex page.

--- a/less/app.less
+++ b/less/app.less
@@ -3247,6 +3247,23 @@ button.standard:hover:not([disabled]) {
           .form-group .radio-group {
             margin: 10px 0 -10px 5px;
           }
+          #hmdSettingsProductRegex {
+            .group {
+              width: auto;
+              padding: 5px;
+            }
+            .group-content {
+              display: flex;
+              flex-wrap: wrap;
+              padding: 10px 5px;
+              margin-right: 5px;
+              border: 1px solid var(--primaryBorder);
+            }
+            .product-regex {
+              width: 23.9%;
+              margin: 5px;
+            }
+          }
         }
       }
     }
