Continue work on the HMD settings product regex section. Add convert test input and button.

--- a/less/app.less
+++ b/less/app.less
@@ -3260,9 +3260,17 @@ button.standard:hover:not([disabled]) {
               border: 1px solid var(--primaryBorder);
             }
             .product-regex {
-              width: 23.9%;
+              width: 22.9%;
               margin: 5px;
             }
+          }
+          .cpe-input-test {
+            width: 400px;
+          }
+          .convert-test {
+            padding: 8px 25px;
+            margin-left: 10px;
+            margin-right: 10px;
           }
         }
       }
