Complete the Product Regex section for HMD Settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -3260,7 +3260,7 @@ button.standard:hover:not([disabled]) {
               border: 1px solid var(--primaryBorder);
             }
             .product-regex {
-              width: 22.9%;
+              width: 31.9%;
               margin: 5px;
             }
           }
@@ -3271,6 +3271,12 @@ button.standard:hover:not([disabled]) {
             padding: 8px 25px;
             margin-left: 10px;
             margin-right: 10px;
+          }
+          .pass input {
+            color: #22ac38;
+          }
+          .fail input {
+            color: #d10d25;
           }
         }
       }
