Add EDR tab for HMD scan dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -828,6 +828,22 @@ html[data-theme='dark'] {
           }
         }
       }
+      .edr {
+        margin-top: 30px;
+        button {
+          margin-right: 10px;
+        }
+        .trigger-time,
+        .execute-time {
+          margin-top: 10px;
+          span {
+            color: var(--formEmailGroup);
+          }
+        }
+        .trigger-time {
+          margin-top: 20px
+        }
+      }
       .settings {
         position: relative;
         overflow: hidden;
