Install and test out the react-sortable-tree library.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1510,6 +1510,11 @@ html[data-theme='dark'] {
 }
 /* configuration/topology/owner-mixname */
 #departmentTitleDialog-content {
+  width: 550px;
+  height: 450px;
+  .tree-section {
+    height: 400px;
+  }  
   .table-data {
     height: 330px;
     margin-top: 15px;
