Update HMD Product Regex page and HMD EDR button group.

--- a/less/app.less
+++ b/less/app.less
@@ -3247,6 +3247,10 @@ button.standard:hover:not([disabled]) {
           .form-group .radio-group {
             margin: 10px 0 -10px 5px;
           }
+          .product-regex-group {
+            max-height: 400px;
+            overflow-y: auto;
+          }
           #hmdSettingsProductRegex {
             .group {
               width: auto;
@@ -3265,18 +3269,19 @@ button.standard:hover:not([disabled]) {
             }
           }
           .cpe-input-test {
-            width: 400px;
+            width: 44%;
           }
           .convert-test {
             padding: 8px 25px;
             margin-left: 10px;
             margin-right: 10px;
           }
-          .pass input {
-            color: #22ac38;
+          .cpe-convert-result {
+            width: 35%;
           }
-          .fail input {
-            color: #d10d25;
+          .convert-result-text {
+            display: inline-flex;
+            margin-left: 15px;
           }
         }
       }
