Update convert CPE CSS.

--- a/less/app.less
+++ b/less/app.less
@@ -3272,7 +3272,8 @@ button.standard:hover:not([disabled]) {
             width: 44%;
           }
           .convert-test {
-            padding: 8px 25px;
+            width: 14%;
+            padding: 8px;
             margin-left: 10px;
             margin-right: 10px;
           }
@@ -3280,8 +3281,9 @@ button.standard:hover:not([disabled]) {
             width: 35%;
           }
           .convert-result-text {
-            display: inline-flex;
-            margin-left: 15px;
+            display: inline-block;
+            width: 5%;
+            margin-left: 1%;
           }
         }
       }
