Update EDR button list logic for HMD EDR tab.

--- a/less/modal.less
+++ b/less/modal.less
@@ -835,15 +835,15 @@ html[data-theme='dark'] {
             margin-right: 10px;
           }
           .btn-group {
-            border: 1px solid var(--primaryBorder);
+            overflow: hidden;
             padding: 20px 15px;
-            border-radius: 10px;
             margin: 15px 0;
+            border: 1px solid var(--primaryBorder);
+            border-radius: 10px;
             button {
               float: left;
-              margin-bottom: 25px;
-              margin-right: 20px;              
-            }            
+              margin-right: 20px;
+            }
             .display-time {
               margin-top: -2px;
               .trigger,
