Add the new department tree to the Host page. Update the new department list across SCP.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1493,7 +1493,7 @@ html[data-theme='dark'] {
       text-align: left;
     }
     tbody td.name {
-      width: 77%;
+      width: 85%;
       font-size: 15px;
     }
     tbody td.ip {
@@ -1514,6 +1514,9 @@ html[data-theme='dark'] {
   height: 450px;
   .tree-section {
     margin-top: 20px;
+    li {
+      margin-bottom: 1px;
+    }
     .tree-label {
       span {
         float: left;
@@ -1522,6 +1525,7 @@ html[data-theme='dark'] {
         display: flex;
         justify-content: flex-end;
         i {
+          font-size: 26px;
           margin: 0 4px;
         }
         .fg-add {
