Start the Host jump.

--- a/less/modal.less
+++ b/less/modal.less
@@ -749,9 +749,11 @@ html[data-theme='dark'] {
                       color: var(--primaryContentHeader);
                     }
                   }
-                  li a {
+                  li a,
+                  .display-link {
                     font-weight: bold;
                     text-decoration: underline;
+                    cursor: pointer;
                   }
                   .fg-play {
                     position: absolute;
