--- a/less/app.less
+++ b/less/app.less
@@ -1022,6 +1022,10 @@ button.standard:hover:not([disabled]) {
         float: left;
         margin-right: 5px
       }
+      .batch-updates {
+        margin-top: -8px;
+        margin-left: 5px;
+      }
     }
   }
   .table-cell {
