Minor account edit css fix.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1642,9 +1642,10 @@ html[data-theme='dark'] {
   }
   .account-form {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-wrap: wrap;
     .group {
+      width: 80%;
       margin: 10px;
     }
     .privileges-list {
