Add the Vans Notes in HMD scan dialog.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1317,6 +1317,23 @@ html[data-theme='dark'] {
         font-weight: bold;
         color: var(--primaryContentHeader);
       }
+      i.fg {
+        float: right;
+      }
+    }
+    .vans-notes {
+      padding: 0 10px;
+      .group {
+        margin: 16px 0;
+      }
+      .notes {
+        textarea {
+          border: none;
+        }
+      }
+      button.save {
+        float: right;
+      }
     }
     & > .content {
       height: 550px;
