Add Vans annotation and filter for both HMD and Host assessment pages.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1331,8 +1331,12 @@ html[data-theme='dark'] {
           border: none;
         }
       }
-      button.save {
+      button.save,
+      button.delete {
         float: right;
+      }
+      button.delete {
+        margin-right: 10px;
       }
     }
     & > .content {
