Complete the Vans Notes implementation for HMD and Host assessment pages.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1327,9 +1327,8 @@ html[data-theme='dark'] {
         margin: 16px 0;
       }
       .notes {
-        textarea {
-          border: none;
-        }
+        font-size: 17px;
+        padding: 8px 10px;
       }
       button.save,
       button.delete {
