--- a/less/modal.less
+++ b/less/modal.less
@@ -1310,37 +1310,6 @@ html[data-theme='dark'] {
 }
 
 #hostModalDialog-content {
-  .color-box {
-    float: left;
-    width: 30px;
-    height: 30px;
-    margin-top: 4px;
-    border-radius: 5px;
-    &.red {
-      background-color: #B80000;
-    }
-    &.orange {
-      background-color: #DB3E00;
-    }     
-    &.yellow {
-      background-color: #FCCB00;
-    }
-    &.green {
-      background-color: #008B02;
-    }
-    &.darkGreen {
-      background-color: #006B76;
-    }
-    &.blue {
-      background-color: #1273DE;
-    }
-    &.darkBlue {
-      background-color: #004DCF;
-    }
-    &.purple {
-      background-color: #5300EB;
-    }
-  }
   .main-content {
     & > .nav ul li.header {
       cursor: pointer;
@@ -1359,22 +1328,56 @@ html[data-theme='dark'] {
       padding: 5px 10px 15px 10px;
       .group {
         margin: 16px 0;
-        &.color {
-          margin-top: -10px;
-          margin-bottom: -5px;
-        }
-        &.picker label {
+        &.color label {
           float: left;
-          margin-top: 8px;
-          margin-right: 10px;
+          margin-top: -10px;
+          margin-right: 5px;
+          margin-bottom: 5px;
+        }
+        input {
+          font-size: .95em;
         }
       }
+      .color-box {
+        float: left;
+        width: 30px;
+        height: 15px;
+        margin-top: -6px;
+        border-radius: 3px;
+        &.red {
+          background-color: #B80000;
+        }
+        &.orange {
+          background-color: #DB3E00;
+        }     
+        &.yellow {
+          background-color: #FCCB00;
+        }
+        &.green {
+          background-color: #008B02;
+        }
+        &.darkGreen {
+          background-color: #006B76;
+        }
+        &.blue {
+          background-color: #1273DE;
+        }
+        &.darkBlue {
+          background-color: #004DCF;
+        }
+        &.purple {
+          background-color: #5300EB;
+        }
+      }
+      .github-picker {
+        clear: both;
+        margin-left: -5px;
+      }
       .notes {
-        font-size: 17px;
         padding: 8px 10px;
       }
       .btn-group {
-        margin-top: 70px;
+        margin-top: 15px;
         button.save,
         button.delete {
           float: right;
