Minor code update.

--- a/less/app.less
+++ b/less/app.less
@@ -1953,10 +1953,6 @@ button.standard:hover:not([disabled]) {
                   color: #fff;
                   font-size: 35px;
                 }
-                .vans-status {
-                  padding: 0 5px;
-                  border-radius: 5px;
-                }
               }
               .info {
                 float: left;
@@ -2633,6 +2629,11 @@ button.standard:hover:not([disabled]) {
               }
             }
           }
+        }
+        .vans-status {
+          padding: 0 5px;
+          margin: 0 5px;
+          border-radius: 5px;
         }
         .edit-syslog-config {
           height: 70vh;
