Convert the Host status search to use Autocomplete component.

--- a/less/app.less
+++ b/less/app.less
@@ -1920,6 +1920,12 @@ button.standard:hover:not([disabled]) {
             width: 165px;
             margin: 15px 0px 10px 20px;
           }
+          .combo-box {
+            display: inline-flex;
+            vertical-align: top;
+            width: 165px;
+            margin: 15px 0px 10px 20px;
+          }
           .safety-btns {
             position: absolute;
             top: 70px;
