--- a/less/modal.less
+++ b/less/modal.less
@@ -1323,19 +1323,23 @@ html[data-theme='dark'] {
     }
     .vans-notes {
       overflow: hidden;
-      overflow-y: auto;
       height: 340px;
       padding: 5px 10px 15px 10px;
+      overflow-y: auto;
       .group {
         margin: 16px 0;
         &.color label {
           float: left;
-          margin-top: -10px;
-          margin-right: 5px;
-          margin-bottom: 5px;
+          margin: -10px 5px 10px 0;
         }
         input {
           font-size: .95em;
+        }
+        button.clear {
+          float: left;
+          line-height: 1.3;
+          padding: 0;
+          margin: -8px 0 0 8px;
         }
       }
       .color-box {
@@ -1374,6 +1378,7 @@ html[data-theme='dark'] {
         margin-left: -5px;
       }
       .notes {
+        font-size: 15px;
         padding: 8px 10px;
       }
       .btn-group {
