Add radio buttons for Vans notes new/existing options.

--- a/less/app.less
+++ b/less/app.less
@@ -1924,7 +1924,8 @@ button.standard:hover:not([disabled]) {
             margin: 15px 0px 10px 20px;
           }
           .combo-box,
-          .filter-btn {
+          .filter-btn,
+          .clear-btn {
             display: inline-flex;
             vertical-align: top;
           }
@@ -1939,6 +1940,9 @@ button.standard:hover:not([disabled]) {
             &:hover {
               background-color: var(--buttonSelectedColor) !important;
             }
+          }
+          .clear-btn {
+            margin: 18px 0px 10px 5px;
           }
           .safety-btns {
             position: absolute;
