--- a/less/modal.less
+++ b/less/modal.less
@@ -1341,6 +1341,10 @@ html[data-theme='dark'] {
           padding: 0;
           margin: -8px 0 0 8px;
         }
+        .radio-group {
+          flex-direction: row;
+          margin: -15px 0 10px 0;
+        }
       }
       .color-box {
         float: left;
