Start the React flow implementation for SOAR.

--- a/less/app.less
+++ b/less/app.less
@@ -1284,6 +1284,39 @@ button.standard:hover:not([disabled]) {
   .data-content {
     display: flex;
     min-height: 87vh;
+
+    .reactflow-wrapper {
+      flex-grow: 1;
+      height: 87vh;
+      border-right: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+    }
+    aside {
+      max-width: 250px;
+      width: 20%;
+      background: #fcfcfc;
+      border-right: 1px solid #eee;
+      font-size: 12px;
+      padding: 15px 10px;
+    }
+    .dndnode {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 20px;
+      padding: 20px;
+      margin-bottom: 15px;
+      border-radius: 2px;
+      border: 1px solid #1a192b;
+      cursor: grab;
+      &.input {
+        border-color: #0041d0;
+      }
+      &.output {
+        border-color: #ff0072;
+      }
+    }
+
     .left-nav {
       position: relative;
       flex-grow: 0;
