Play around React Flow more.

--- a/less/app.less
+++ b/less/app.less
@@ -1292,6 +1292,8 @@ button.standard:hover:not([disabled]) {
       border-bottom: 1px solid #ccc;
     }
     aside {
+      height: 87vh;
+      overflow-y: auto;
       max-width: 250px;
       width: 20%;
       background: #fcfcfc;
@@ -1304,17 +1306,28 @@ button.standard:hover:not([disabled]) {
       align-items: center;
       justify-content: center;
       height: 20px;
-      padding: 20px;
       margin-bottom: 15px;
-      border-radius: 2px;
       border: 1px solid #1a192b;
       cursor: grab;
+      border-radius: 3px;
+      font-size: 12px;
+      text-align: center;
+      padding: 18px 10px;
       &.input {
         border-color: #0041d0;
       }
       &.output {
         border-color: #ff0072;
       }
+    }
+    .mini-map {
+      border: 1px solid #ccc;
+    }
+    .selected-node {
+      padding: 10px 0 5px 0;
+      margin: 25px 0 10px 0;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
     }
 
     .left-nav {
