Add Pie Chart for Vans Host Assessment page. Minor style and code updates for tables.

--- a/less/app.less
+++ b/less/app.less
@@ -2255,6 +2255,10 @@ button.standard:hover:not([disabled]) {
                   li {
                     flex-basis: 15%;
                     padding: 10px 10px;
+                    &.vans-name {
+                      flex-basis: 14.5%;
+                      padding-left: 40px;
+                    }
                   }
                 }
               }
