--- a/less/modal.less
+++ b/less/modal.less
@@ -1324,12 +1324,16 @@ html[data-theme='dark'] {
     .vans-notes {
       overflow: hidden;
       padding: 5px 10px 15px 10px;
-      overflow-y: auto;
+      overflow: auto;
       .group {
         margin: 16px 0;
-        &.color label {
-          float: left;
-          margin: -10px 5px 10px 0;
+        &.color {
+          overflow: hidden;
+          margin-top: -5px;
+          label {
+            float: left;
+            margin-right: 5px;
+          }
         }
         input {
           font-size: .95em;
@@ -1338,7 +1342,6 @@ html[data-theme='dark'] {
           float: left;
           line-height: 1.3;
           padding: 0;
-          margin: -8px 0 0 8px;
         }
         .radio-group {
           flex-direction: row;
@@ -1349,7 +1352,8 @@ html[data-theme='dark'] {
         float: left;
         width: 30px;
         height: 15px;
-        margin-top: -6px;
+        margin-top: 3px;
+        margin-right: 5px;
         border-radius: 3px;
         &.red {
           background-color: #B80000;
@@ -1378,7 +1382,9 @@ html[data-theme='dark'] {
       }
       .github-picker {
         clear: both;
-        margin-left: -5px;
+        margin-top: 30px;
+        padding: 0 !important;
+        border: none !important;
       }
       .notes {
         font-size: 15px;
@@ -1386,6 +1392,7 @@ html[data-theme='dark'] {
       }
       .btn-group {
         margin-top: 15px;
+        clear: both;
         button.save,
         button.delete {
           float: right;
