Update palette styles for Vans Notes.

--- a/less/modal.less
+++ b/less/modal.less
@@ -1383,8 +1383,8 @@ html[data-theme='dark'] {
       .github-picker {
         clear: both;
         margin-top: 30px;
-        padding: 0 !important;
-        border: none !important;
+        width: 205px !important;
+        padding: 1px !important;
       }
       .notes {
         font-size: 15px;
