Complete the SOAR main settings page.

--- a/less/app.less
+++ b/less/app.less
@@ -1294,6 +1294,16 @@ button.standard:hover:not([disabled]) {
         }
       }
     }
+    &.soar-settings {
+      .group-header {
+        display: block;
+        font-weight: bold;
+        color: var(--primaryContentHeader);
+        width: 100%;
+        padding: 5px 5px 10px 5px;
+        text-align: left;
+      }
+    }
     &.react-flow-demo {
       .reactflow-wrapper {
         flex-grow: 1;
